test/fail/collection-index-set.app
//Indexed access [] is only allowed for
application test

define page root() {
}

function test(){
  var set := {"fd3edf","eftrf"};
  var s := set[0];
  
}